--- a/Pretty -css/style.css
+++ b/Pretty -css/style.css
@@ -1,8 +1,10 @@
 body{
     margin: 0;
 }
-header{
-    background-image: url(image/zakat.jpg);
+.header{
+  display: flex;
+  flex-direction: column;
+  text-align: center; */
 }
 header h1{
     color: blue;
@@ -10,7 +12,7 @@ header h1{
 .top-position{
     display: flex;
     width: 80%;
-    margin: 10px 100px;
+    margin: 10px 100px; 
     /* justify-content: center;
     align-items: center; */
 }
@@ -22,7 +24,8 @@ header h1{
 .second-position{
     display: flex;
     width: 80%;
-    margin: 100px;
+    margin: 10px 100px;
+
     /* justify-content: center;
     align-items: center; */
 }
@@ -32,17 +35,83 @@ header h1{
    
 }
 .button{
-    padding: ;
-    background-color: ;
+    padding: 16, 12px;
+    background-color: #EF233C ;
     color: white;
     font-weight: 700;
     font-size: 18px;
+    width: 150PX;
+    height: 56px;
+    border: none;
+    border-radius: 5px;
 }
+.div-3{
+    display: flex;
+    flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     text-align: center;
+}
+.div-4{
+    
+  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+     margin: 100, 0px; 
+    align-items: center;
+    padding-right: 100px;
+
+}
+.help{
+    display: flex;
+    width: 225px;
+    height:225px;
+    background-color: bisque;
+    border-radius: 10px;
+     margin-top: 50px;
+    margin-left: 250px;   
+}
+    
+.img{
+    margin-top: 25px;
+    padding-right: 10px;
+}
+.div-5{
+    display: flex;
+   width: 40%;
+   margin: 50px 50px;
+}
+
+.img-2{
+   height: 300px;
+   width: 391;
+   padding-left: 30px;
+}    
+.div-6{
+    text-align: center;
+}
+.div-7{
+    display: flex;
+    margin: 50px 50px;
+  /* width: 30%; */
+    
+}
+.fund{
+    border: 1px solid #d0d0d0;
+    height: 370px;
+    width: 300px;
+    margin-left: 30px;
+    border-radius: 10px;
     
 
-footer{
+}
+.img-3{
+    width: 300px;
+}
+.footer{
     background-color: black;
     text-align: center;
-    color: aqua;
+
+    color: #EF233C;
 }
-    
